# xfce4-whiskermenu-standalone

./: .gitignore  CMakeLists.txt  INSTALL  README
src/: CMakeLists.txt  main.c  plugin_fake.cpp
